fixed z-index for dropdown

--- a/css/map.css
+++ b/css/map.css
@@ -23,6 +23,10 @@
 	font-size: 1.3em;
 }
 
+.dropdown-menu {
+	z-index: 1500;
+}
+
 .loading-map {
 	text-align: center;
 }
